OpenProject/production/openproject/op-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openproject
  namespace: open-project
spec:
  replicas: 1
  template:
    metadata:
      name: openproject
      labels:
        name: openproject
    spec:
      containers:
        - image: openproject/community:7
          name: openproject
          ports:
            - name: openproject
              containerPort: 80
              protocol: TCP
          volumeMounts:
            # This name must match the volumes.name below.
            - name: op-data-disk
              mountPath: /var/db/openproject
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 600
            timeoutSeconds: 1
          resources:
              limits:
                cpu: 500m
                memory: 1Gi
              requests:
                cpu: 200m
                memory: 500m
      volumes:
        - name: op-data-disk
          persistentVolumeClaim:
            claimName: openproject-claim
